tests/dataset/tpc-ds/compiler/java/q49.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq49693570697/001/Q49.java:119: error: for-each not applicable to expression type
    for (var r : tmp) {
                 ^
  required: array or java.lang.Iterable
  found:    Object
1 error
